--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,6 +21,10 @@ allprojects {
     dependencies = [
                     retrofit                   : 'com.squareup.retrofit2:retrofit:2.0.2',
                     gsonConverter              : 'com.squareup.retrofit2:converter-gson:2.0.2',
+
+                     
+                    okHttp                     : "com.squareup.okhttp3:okhttp:3.4.1",
+                    gson                       : "com.google.code.gson:gson:2.6.2",
                    // permissionsModule          : project(':permissionModule'){transitive=true}
                         permissionsModule          : 'com.github.GigigoGreenLabs:permissionsModule:2.3'//master branch
                     //   permissionsModule          : 'com.github.GigigoGreenLabs:permissionsModule:1.1'//master branch
