--- a/ggglib/build.gradle
+++ b/ggglib/build.gradle
@@ -61,6 +61,7 @@ dependencies {
   compile parent.ext.dependencies.permissionsModule
   compile parent.ext.dependencies.retrofit
   compile parent.ext.dependencies.gsonConverter
+  compile parent.ext.dependencies.okHttp
 
   compile project (':ggg-java-lib')
   compile project (':ggglogger')
