--- a/ggglogger/build.gradle
+++ b/ggglogger/build.gradle
@@ -20,6 +20,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'com.github.dcendents.android-maven'
 
 
+
 android {
   compileSdkVersion parent.ext.androidCompileSdkVersion
   buildToolsVersion parent.ext.androidBuildToolsVersion
@@ -39,7 +40,10 @@ android {
   testOptions {
     unitTests.returnDefaultValues = true
   }
-
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
+  }
   packagingOptions {
     exclude 'META-INF/services/javax.annotation.processing.Processor'
     exclude 'LICENSE.txt'
