--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -23,7 +23,9 @@ allprojects {
                     gsonConverter              : 'com.squareup.retrofit2:converter-gson:2.1.0',
 
                    // permissionsModule          : project(':permissionModule'){transitive=true}
-                        permissionsModule          : 'com.github.GigigoGreenLabs:permissionsModule:2.3'//master branch
+
+                    //permissionsModule          : 'com.github.GigigoGreenLabs:permissionsModule:2.3'//master branch
+                    permissionsModule          : 'com.github.Gigigo-Android-Devs:gigigo-permissions-library-android:3.6RC'//master branch
                     //   permissionsModule          : 'com.github.GigigoGreenLabs:permissionsModule:1.1'//master branch
                    // permissionsModule          : 'com.github.GigigoGreenLabs:permissionsModule:2.1' //new reducebranch
     ]
