--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,13 @@
 apply plugin: 'com.android.application'
 
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  compileSdkVersion 27
+  buildToolsVersion "27.0.3"
 
   defaultConfig {
     applicationId "gigigo.com.gigigoutilssuite"
     minSdkVersion 15
-    targetSdkVersion 23
+    targetSdkVersion 27
     versionCode 1
     versionName "1.0"
   }
@@ -38,11 +38,6 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  testCompile 'junit:junit:4.12'
-  //compile 'com.android.support:appcompat-v7:23.1.1'
-//  compile project( ':ggglib')
-
-//  compile 'com.google.android.gms:play-services-location:8.4.0'
-//  compile   'com.google.android.gms:play-services-gcm:8.4.0'
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  testImplementation 'junit:junit:4.12'
 }
