--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,12 @@ buildscript {
     jcenter()
     mavenCentral()
 
+    google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.1.2'
+    classpath 'com.android.tools.build:gradle:3.1.2'
 //    classpath 'com.google.gms:google-services:2.0.0-alpha5'
-    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
@@ -38,10 +39,10 @@ allprojects {
 
   ext {
     // Android config
-    androidCompileSdkVersion = 23
-    androidBuildToolsVersion = '23.0.1'
-    androidMinSdkVersion = 10
-    androidTargetSdkVersion = 23
+    androidCompileSdkVersion = 27
+    androidBuildToolsVersion = '27.0.3'
+    androidMinSdkVersion = 14
+    androidTargetSdkVersion = 27
     androidApplicationId = 'com.gigigo.ggglib.utilssuite'
     androidVersionCode = 1
     androidVersionName = '1.0'
